# f1-pit-wall

./: CMakeLists.txt  README.md  setup.py
controllers/: session_loader.py
include/: f1_processor.h
models/: race_state.py  session.py
src/: bindings.cpp  f1_processor.cpp
views/: main_window.py  telemetry_panel.py  track_details.py
